@@ -1,64 +1,139 @@
 package com.entreprise.immobilier.service.impl;
 
 import com.entreprise.immobilier.dto.UserDTO;
-import com.entreprise.immobilier.UserMapper;
 import com.entreprise.immobilier.model.User;
 import com.entreprise.immobilier.repository.UserRepository;
 import com.entreprise.immobilier.service.interfaces.UserService;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
-    private final UserMapper userMapper;
+    private final PasswordEncoder passwordEncoder;
+
+    // ==============================
+    // 🔹 Mappage manuel User <-> UserDTO
+    // ==============================
+    private UserDTO toDTO(User user) {
+        return UserDTO.builder()
+                .id(user.getId())
+                .firstName(user.getFirstName())
+                .lastName(user.getLastName())
+                .email(user.getEmail())
+                .phoneNumber(user.getPhoneNumber())
+                .role(user.getRole())
+                .enabled(user.isEnabled())
+                .createdAt(user.getCreatedAt())
+                .updatedAt(user.getUpdatedAt())
+                .build();
+    }
+
+    private User toEntity(UserDTO dto) {
+        return User.builder()
+                .id(dto.getId())
+                .firstName(dto.getFirstName())
+                .lastName(dto.getLastName())
+                .email(dto.getEmail())
+                .password(dto.getPassword()) // à encoder avant save
+                .phoneNumber(dto.getPhoneNumber())
+                .role(dto.getRole())
+                .enabled(dto.isEnabled())
+                .createdAt(dto.getCreatedAt())
+                .updatedAt(dto.getUpdatedAt())
+                .build();
+    }
+
+    // ==============================
+    // 🔹 Implémentation du CRUD
+    // ==============================
 
     @Override
     public List<UserDTO> getAllUsers() {
-        return userRepository.findAll()
-                .stream()
-                .map(userMapper::toDTO)
-                .toList();
+        return userRepository.findAll().stream()
+                .map(this::toDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
     public Optional<UserDTO> getUserById(Long id) {
-        return userRepository.findById(id)
-                .map(userMapper::toDTO);
+        return userRepository.findById(id).map(this::toDTO);
     }
 
     @Override
     public User createUser(UserDTO userDTO) {
-        User user = userMapper.toEntity(userDTO);
+        User user = toEntity(userDTO);
+        if (user.getPassword() != null && !user.getPassword().isBlank()) {
+            user.setPassword(passwordEncoder.encode(user.getPassword()));
+        }
         return userRepository.save(user);
     }
 
     @Override
     public User updateUser(Long id, UserDTO userDTO) {
-        User existing = userRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Utilisateur non trouvé."));
+        User existingUser = userRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Utilisateur introuvable avec l'id " + id));
 
-        existing.setFirstName(userDTO.getFirstName());
-        existing.setLastName(userDTO.getLastName());
-        existing.setEmail(userDTO.getEmail());
-        existing.setPhoneNumber(userDTO.getPhoneNumber());
-        existing.setRole(userDTO.getRole());
-        existing.setEnabled(userDTO.isEnabled());
+        existingUser.setFirstName(userDTO.getFirstName());
+        existingUser.setLastName(userDTO.getLastName());
+        existingUser.setEmail(userDTO.getEmail());
+        existingUser.setPhoneNumber(userDTO.getPhoneNumber());
+        existingUser.setRole(userDTO.getRole());
+        existingUser.setEnabled(userDTO.isEnabled());
 
-        return userRepository.save(existing);
+        if (userDTO.getPassword() != null && !userDTO.getPassword().isBlank()) {
+            existingUser.setPassword(passwordEncoder.encode(userDTO.getPassword()));
+        }
+
+        return userRepository.save(existingUser);
     }
 
     @Override
     public void deleteUser(Long id) {
         if (!userRepository.existsById(id)) {
-            throw new EntityNotFoundException("Utilisateur non trouvé.");
+            throw new EntityNotFoundException("Utilisateur introuvable avec l'id " + id);
         }
         userRepository.deleteById(id);
+    }
+
+    @Override
+    public void setUserStatus(Long id, boolean active) {
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Utilisateur introuvable avec l'id " + id));
+        user.setEnabled(active);
+        userRepository.save(user);
+    }
+
+    @Override
+    public Optional<UserDTO> findByEmailOrPhone(String email, String phone) {
+        if ((email == null || email.isBlank()) && (phone == null || phone.isBlank())) {
+            throw new IllegalArgumentException("Fournir au moins 'email' ou 'phone'.");
+        }
+
+        Optional<User> res = (email != null && !email.isBlank() && phone != null && !phone.isBlank())
+                ? userRepository.findByEmailOrPhoneNumber(email, phone)
+                : (email != null && !email.isBlank())
+                ? userRepository.findByEmail(email)
+                : userRepository.findByPhoneNumber(phone);
+
+        return res.map(this::toDTO);
+    }
+
+    @Override
+    public Optional<UserDTO> findByEmail(String email) {
+        return userRepository.findByEmail(email).map(this::toDTO);
+    }
+
+    @Override
+    public Optional<UserDTO> findByPhone(String phone) {
+        return userRepository.findByPhoneNumber(phone).map(this::toDTO);
     }
 }
